--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,30 +6,57 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
+    "@headlessui/react": "^1.7.14",
+    "@motionone/utils": "^10.16.3",
+    "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
+    "@syncfusion/ej2": "^19.4.48",
+    "@syncfusion/ej2-react-calendars": "^19.4.48",
+    "@syncfusion/ej2-react-schedule": "^19.4.50",
+    "@tailwindcss/forms": "^0.5.4",
+    "aos": "^2.3.4",
+    "axios": "^1.4.0",
+    "chart.js": "^4.4.0",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "framer-motion": "^10.12.16",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.0.18",
+    "lord-icon-element": "^4.1.1",
+    "lottie-web": "^5.12.2",
+    "moment": "^2.29.4",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker": "^4.18.0",
+    "react-datetime": "^3.2.0",
+    "react-day-picker": "^8.8.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.1.1",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.23.0",
     "react-toastify": "^9.1.3",
-    "tailwind-scrollbar": "^3.1.0",
-    "tailwind-scrollbar-hide": "^1.1.7"
+    "stripe": "^13.9.0",
+    "swiper": "^10.3.1",
+    "tailwindcss-scrollbar": "^0.1.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "vite": "^5.2.0"
+    "eslint-plugin-react-refresh": "^0.3.4",
+    "postcss": "^8.4.23",
+    "tailwind-scrollbar": "^3.0.4",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.3.2"
   }
 }
