--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^4.5.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -18,6 +20,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.2.4",
     "morgan": "~1.9.1",
     "nodemon": "^3.1.0",
